<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Home Automation</string>
    <string name="login">Login To Home</string>
    <string name="home_view">Home View</string>

    <string name="connect_button">Connect To Home</string>

    <!-- Hints -->
    <string name="serverURIHint">192.168.1.1</string>
    <string name="portHint">1883</string>

    <string name="server">Server</string>
    <string name="port">Port</string>

    <string name="missingOptions">Server address or Port number is missing. Please correct or press back arrow cancel.</string>

    <string-array name="image_ids">
        <item>hall1</item>
        <item>bedroom1</item>
        <item>bedroom2</item>
        <item>kitchen</item>
    </string-array>

    <string-array name="hall1">
        <item>BULB1,bulb</item>
        <item>CFL1,cfl</item>
        <item>BULB2,bulb</item>
        <item>TUBE1,tube</item>
        <item>TUBE2,tube</item>
        <item>TV1,tv</item>
        <item>BULB3,bulb</item>
        <item>CFL2,cfl</item>
        <item>BULB4,bulb</item>
        <item>TUBE3,tube</item>
        <item>TUBE4,tube</item>
        <item>TV2,tv</item>
        <item>BULB5,bulb</item>
        <item>CFL3,cfl</item>
        <item>BULB6,bulb</item>
        <item>TUBE5,tube</item>
        <item>TUBE6,tube</item>
        <item>TV3,tv</item>
        <item>BULB7,bulb</item>
        <item>BULB8,bulb</item>
        <item>BULB9,bulb</item>
        <item>BULB10,bulb</item>
        <item>BULB11,bulb</item>
    </string-array>

    <string-array name="bedroom1">
        <item>TUBE1,tube</item>
        <item>TUBE2,tube</item>
        <item>BULB1,bulb</item>
        <item>CFL1,cfl</item>
        <item>BULB2,bulb</item>
    </string-array>

    <string-array name="bedroom2">
        <item>BULB1,bulb</item>
        <item>CFL1,cfl</item>
        <item>BULB2,bulb</item>
    </string-array>

    <string-array name="kitchen">
        <item>BULB1,bulb</item>
        <item>CFL1,cfl</item>
    </string-array>

</resources>
