<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_blue">

    <LinearLayout
        android:id="@+id/serverGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_alignParentLeft="true" >

        <TextView
            android:id="@+id/serverTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="20dip"
            android:text="@string/server" />

        <AutoCompleteTextView
            android:id="@+id/serverURI"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:ems="10"
            android:hint="@string/serverURIHint"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/portGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/serverGroup" >

        <TextView
            android:id="@+id/portTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="35dip"
            android:text="@string/port" />

        <EditText
            android:id="@+id/port"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.22"
            android:ems="10"
            android:hint="@string/portHint"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/connectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:text="@string/connect_button"
        android:layout_below="@id/portGroup" />

</RelativeLayout>